--- a/gb/22/3/18/n13656673.md
+++ b/gb/22/3/18/n13656673.md
@@ -1,65 +1,69 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vfkyrj397/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vfkyrj397/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vfkyrj397/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vfkyrj397/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vfkyrj397/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>德国著名杂志刊文：中共强摘法轮功学员器官</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/03/id13656687-I7W7e_xP-1-1-600x400.jpeg" />
 <h6>《沉默呼声》电影海报。（《沉默呼声》制作团队提供）
 </h6>
 <hr>
-	<p>【大纪元2022年03月19日讯】（大纪元记者余平德国报导）20多年来，中共政府对<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>修炼者进行残酷迫害。德国《明星》周刊近日刊文，揭露中共系统摘取法轮功学员器官的罪行。</p>
-<p>德国《明星》周刊（ Stern）日前在其网页上刊文，题目是：系统<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E5%BC%BA%E6%91%98%E5%99%A8%E5%AE%98.md#1">强摘器官</a> 中（共）国：人们遭受迫害、酷刑及杀戮——因为他们打坐。（Systematischer Organraub China: Menschen verfolgt, gefoltert und get?tet – weil sie meditieren）</p>
-<p>《明星》总部位于汉堡，是一个新闻杂志，与《明镜》、《焦点》并列为德国发行量最大的三份周刊。</p>
-<p>作者辛德朗（Laura Hindelang）在文章中介绍，20多年来，中共政府对<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>修炼者进行迫害，关押、酷刑、杀害，估计数以千计的人成为<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/%E5%BC%BA%E6%91%98%E5%99%A8%E5%AE%98.md#1">强摘器官</a>的牺牲品。</p>
-<p>她还引述美国政府的年度《人权报告》称，中共政府在“大规模系统地活体摘取器官”。</p>
-<p>辛德朗在文中介绍，法轮功也称法轮大法，是以真、善、忍为原则的打坐修炼方法，有益身心健康。上世纪九十年代初期传出后，很快吸引了数百万人学习。一次，数以千计的法轮功学员组织了无声的抗议活动，中共政府便将这个民间打坐功法视为“对社会及政治稳定的威胁”，将法轮功修炼者视为“政治打压对象”，并新成立一个名为“<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/610%E5%8A%9E%E5%85%AC%E5%AE%A4.md#1">610办公室</a>”的安全机构，以消除这个精神运动。</p>
-<p>一份澳大利亚的调查报告指出，<ahref="https://github.com/vfkyrj397/djy/blob/master/gb/tag/610%E5%8A%9E%E5%85%AC%E5%AE%A4.md#1">610办公室</a>是一个在政党和政府框架之外的机构，它高于宪法，因此拥有高于警察和司法的职权。报告还指出，大多数法轮功修炼者被关押几个月后，才被带去见法官，然后经过一个虚假审判过程被定罪，刑法最高达七年，很多人被送入劳教所或所谓的转化中心。作者还引述明慧网的数据称，仅2019年就有约6,000名法轮功学员被拘捕关押。</p>
-<p>辛德朗在文中引述国际“人权观察”的调查称，中国对法轮功关押者的酷刑折磨越来越残暴。作者列举了一对母女的实例，描述她们在劳教所被电棍电击，没头没脸地遭到拳打脚踢的经历。</p>
+	<p>【大纪元2022年03月19日讯】（大纪元记者余平德国报导）二十多年来，中共政府对<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>修炼者进行残酷迫害。德国《明星》周刊近日刊文，揭露中共系统摘取法轮功学员器官的罪行。</p>
+<p>德国《明星》周刊（Stern）日前在其网页上刊文，题目是：系统<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BC%BA%E6%91%98%E5%99%A8%E5%AE%98.md#1">强摘器官</a> 中（共）国：人们遭受迫害、酷刑及杀戮——因为他们打坐（Systematischer Organraub China: Menschen verfolgt, gefoltert und get?tet – weil sie meditieren）。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 200px; margin-bottom: 20px; border-radius: 6px; overflow: hidden;"><a style="width: 100%; height: 200px;" src="https://player.captivate.fm/episode/a9cc5297-ca32-4da7-9761-68d8ac11f20c" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
+<p><strong>（听更多请至<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
+<p>《明星》总部位于汉堡，是一家新闻杂志，与《明镜》、《焦点》并列为德国发行量最大的三份周刊。</p>
+<p>作者辛德朗（Laura Hindelang）在文章中介绍，二十多年来，中共政府对<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>修炼者进行迫害，关押、酷刑、杀害，估计数以千计的人成为活摘器官的牺牲品。</p>
+<p>她还引述美国政府的年度《人权报告》说，中共政府在“大规模系统地活体摘取器官”。</p>
+<p>辛德朗在文中介绍，法轮功也称法轮大法，是以“真、善、忍”为原则的打坐修炼方法，有益身心健康。上世纪九十年代初期传出后，很快吸引了数百万人学习。一次，数以千计的法轮功学员组织了无声的抗议活动，中共政府便将这个民间打坐功法视为“对社会及政治稳定的威胁”，将法轮功修炼者视为“政治打压对象”，并新成立一个名为“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/610%E5%8A%9E%E5%85%AC%E5%AE%A4.md#1">610办公室</a>”的安全机构，以消除这个精神运动。</p>
+<p>一份澳大利亚的调查报告指出，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/610%E5%8A%9E%E5%85%AC%E5%AE%A4.md#1">610办公室</a>是一个在政党和政府框架之外的机构，它高于宪法，因此拥有高于警察和司法的职权。报告还指出，大多数法轮功修炼者被关押几个月后，才被带去见法官，然后经过一个虚假审判过程被定罪，刑法最高达七年，很多人被送入劳教所或所谓的转化中心。作者还引述明慧网的数据说，仅2019年就有约6,000名法轮功学员被拘捕关押。</p>
+<p>辛德朗在文中引述国际“人权观察”的调查表示，中国对法轮功关押者的酷刑折磨越来越残暴。作者列举了一对母女的实例，描述她们在劳教所被电棍电击，没头没脸地遭到拳打脚踢的经历。</p>
 <p>大赦国际组织罗列的酷刑种类包括，剥夺睡眠、强迫保持某种难以忍受的姿势以及其它折磨和虐待身心的方式。该组织还持续报导法轮功学员被折磨致死的案例。</p>
-<p>文中曝光了活体强摘法轮功学员器官的罪行，作者引述“追查迫害法轮功联盟”的调查称，自从中共政府迫害法轮功以来，中国的器官移植业便呈现爆炸式增长。作者辛德朗称，中国拥有一个庞大的活体器官供体库，直到今天，从事器官移植服务的医院在广告中依然承诺，可以在几天内获得所需的任何器官，而且每次手术都有多个活体器官可供选择。</p>
-<p>一个由律师和专家组成的独立小组证实了强摘器官的事，路透社2019年曾报导了调查结果。该调查小组认为，法轮功学员“很有可能是遭到器官强摘的主要群体”，“很多人无故死亡，死状极为可怕，难以形容”。</p>
+<p>文中曝光了活体强摘法轮功学员器官的罪行，作者引述“追查迫害法轮功国际组织”的调查说，自从中共政府迫害法轮功以来，中国的器官移植业便呈现爆炸式增长。</p>
+<p>作者辛德朗表示，中国拥有一个庞大的活体器官供体库，直到今天，从事器官移植服务的医院在广告中依然承诺，可以在几天内获得所需的任何器官，而且每次手术都有多个活体器官可供选择。</p>
+<p>一个由律师和专家组成的<ahref="https://chinatribunal.com/">独立小组</a>证实了<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BC%BA%E6%91%98%E5%99%A8%E5%AE%98.md#1">强摘器官</a>的事，路透社2019年曾报导了调查结果。该调查小组认为，法轮功学员“很有可能是遭到器官强摘的主要群体”，“很多人无故死亡，死状极为可怕，难以形容”。</p>
 <p>最后文中还提到加拿大华裔导演李云翔（Leon Lee）的电影《沉默呼声》（Unsilenced），这部电影目前正在加拿大电影院放映，讲述了法轮功学员的经历。李云翔在海外生活了15年，家乡法轮功学员遭受的迫害令他感到震惊，他希望借助这个半自传性的电影引起国际舆论的关注。</p>
 <p>辛德朗还透露，这部电影不久也将在德国电影院放映。</p>
-<p>责任编辑：王亦笑</p>
+<p>责任编辑：王亦笑#</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/14/n13645944.md#1">俄乌战争影响下 德国将购买35架F-35战机</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/16/n13650843.md#1">德国日增感染破26万 多州推迟放宽防疫措施</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13654011.md#1">乌克兰战事影响 德国现食用油抢购潮</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13654028.md#1">德国物价飞涨 金融专家推广省钱妙招</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/14/n13645944.md#1">俄乌战争影响下 德国将购买35架F-35战机</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/16/n13650843.md#1">德国日增感染破26万 多州推迟放宽防疫措施</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/17/n13654011.md#1">乌克兰战事影响 德国现食用油抢购潮</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/17/n13654028.md#1">德国物价飞涨 金融专家推广省钱妙招</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/3/n11564392.md#1" target="_blank">凌晓辉：当代人类的天书（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/11/20/n4014880.md#1" target="_blank">修炼人的故事：从地狱到天堂</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/11/n11446216.md#1" target="_blank">夏祷：2019火种：天象巨变（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/6/26/n9322928.md#1" target="_blank">一位法轮功学员家属想要说的话</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/21/12/10/n13430091.md#1">【百年真相】革命还是暴动？湖南农民运动真相</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/13/n13643964.md#1">【未解之谜】穿越长城 是功能还是魔术？</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/10/n13635669.md#1">【人生之钥】遭遇强盗 十五六岁女孩失足落水后的命运</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/5/n13624821.md#1">传统武术讲功夫 新武术是大跃进产物</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/9/n13634369.md#1">明朝御史刘伟尸解成仙 见故人说生死</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13654272.md#1">【新闻看点】拜习将再通话 中共开始转向？</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13655088.md#1">【时事军事】幻象2000坠毁 促台湾另辟蹊径</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13654103.md#1">【神韵原创音乐】2019 神韵交响乐《长袖舞唐宫》</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/16/n13649338.md#1">老坛酸菜制作现场怵目惊心 康师傅股价暴跌</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/16/n13651336.md#1">五人在美充当中共特务 美司法部高调起诉</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/16/n13649222.md#1">杀害李进进律师的凶嫌  更多背景曝光</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/16/n13648824.md#1">邓伦被爆偷漏税遭罚亿元 或牵连杨颖杨幂杨紫</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/15/n13648253.md#1">当红男星邓伦遭罚上亿 社交账号被封 品牌切割</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/17/n13654085.md#1">乌克兰阵亡男星遗体寻获 生前留防弹衣给孩童</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/15/n13648432.md#1">因性侵案被判赔片方5千万 高云翔前妻也负连责</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/15/n13648637.md#1">香港疑似发生地震 黄秋生讽天文台慢半拍</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/14/n13645167.md#1">洗衣机清洁2诀窍很重要！防霉菌、除异味</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/9/n13634222.md#1">很多人蛋白质吃不足 这样吃才能增肌减脂</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/16/n13650461.md#1">【健康1+1】Omicron变种BA.2中国大爆发？</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/3/14/n13645453.md#1">绿茶似疫苗？研究：儿茶素提升防御力、延长寿命</a></li>
-<li><a href="https://github.com/vfkyrj397/djy/blob/master/gb/22/2/18/n13586954.md#1">喝牛奶易得一型糖尿病？专家：有办法能预防</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690054.md#1">【车评】迷你快车 2022 MINI Cooper S</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677259.md#1">5种抗炎又给人饱腹感的零食</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vfkyrj397/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vfkyrj397/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/18/n13656673.htm">德国著名杂志刊文：中共强摘法轮功学员器官</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/18/n13656673.htm">德国著名杂志刊文：中共强摘法轮功学员器官</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vfkyrj397/djy/blob/master/gb/22/3/18/n13656673.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vfkyrj397/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vfkyrj397/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vfkyrj397/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vfkyrj397/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vfkyrj397/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656673.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
